hphp/test/slow/xhp/attr-syntax-3.php.expectf
Fatal error: ->: operator is not allowed in write context in %s/test/slow/xhp/attr-syntax-3.php on line 11